force-app/main/default/objects/InnovationDetail__c/InnovationDetail__c.object-meta.xml
<CustomObject>
    <description>Innovation Detail</description>
    <label>Innovation Detail</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Innovation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>