force-app/main/default/objects/InnovationDetail__c/fields/commitment__c.field-meta.xml
<CustomField>
    <fullName>commitment__c</fullName>
    <label>Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commit - resource now</fullName>
            </value>
            <value>
                <fullName>Interested but cannot commit</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>