force-app/main/default/objects/InnovationDetail__c/fields/Innovation__c.field-meta.xml
<CustomField>
    <fullName>Innovation__c</fullName>
    <label>Innovation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;0.4 mm</fullName>
            </value>
            <value>
                <fullName>0.3mm</fullName>
            </value>
            <value>
                <fullName>0.4mm</fullName>
            </value>
            <value>
                <fullName>3D</fullName>
            </value>
            <value>
                <fullName>Anti-Glare Texturing</fullName>
            </value>
            <value>
                <fullName>Anti-Scratch Coating</fullName>
            </value>
            <value>
                <fullName>Antimicrobial</fullName>
            </value>
            <value>
                <fullName>AR/EZ</fullName>
            </value>
            <value>
                <fullName>Concore Glass</fullName>
            </value>
            <value>
                <fullName>Contego</fullName>
            </value>
            <value>
                <fullName>Fibrance</fullName>
            </value>
            <value>
                <fullName>Gorilla Glass 3</fullName>
            </value>
            <value>
                <fullName>Gorilla Glass 4</fullName>
            </value>
            <value>
                <fullName>Glass Ceramics</fullName>
            </value>
            <value>
                <fullName>Ink Jet</fullName>
            </value>
            <value>
                <fullName>Large Cover Glass</fullName>
            </value>
            <value>
                <fullName>Laser-Etch</fullName>
            </value>
            <value>
                <fullName>Laser Technology</fullName>
            </value>
            <value>
                <fullName>Willow</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
                <isActive>false</isActive>
                <label>Glass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>