force-app/main/default/objects/InnovationDetail__c/fields/sampleDate__c.field-meta.xml
<CustomField>
    <fullName>sampleDate__c</fullName>
    <label>Sample Date</label>
    <type>Date</type>
</CustomField>