force-app/main/default/objects/InnovationDetail__c/fields/sampleSent__c.field-meta.xml
<CustomField>
    <fullName>sampleSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Sent</label>
    <type>Checkbox</type>
</CustomField>