force-app/main/default/objects/InnovationDetail__c/fields/tripVisitReport__c.field-meta.xml
<CustomField>
    <fullName>tripVisitReport__c</fullName>
    <label>Trip/Visit Report</label>
    <referenceTo>Trip_Visit_Report__c</referenceTo>
    <relationshipLabel>Innovation Details</relationshipLabel>
    <relationshipName>Innovation_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>